plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.7' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'jacoco'
    id 'jacoco-report-aggregation'
    id 'test-report-aggregation'
    id 'org.sonarqube' version '4.4.1.3373'
    id 'com.google.cloud.tools.jib' version '3.5.3'}

group = 'net.liquidcars'
version = '1.0.0-SNAPSHOT'

ext {
    springBootVersion = '3.4.7'
    springBatchVersion = '5.1.2'
    springKafkaVersion = '3.3.0'
    mongoDbVersion = '5.2.1'
    postgresqlVersion = '42.7.4'
    lombokVersion = '1.18.36'
    mapstructVersion = '1.6.3'
    slf4jVersion = '2.0.16'
    jacksonVersion = '2.18.2'
    testcontainersVersion = '1.20.4'
    junitVersion = '5.11.4'
    mockitoVersion = '5.14.2'
    assertjVersion = '3.27.0'
}

apply plugin: 'jacoco-report-aggregation'
apply plugin: 'test-report-aggregation'

dependencies {
    jacocoAggregation project(':ingestion-domain')
    jacocoAggregation project(':ingestion-application')
    jacocoAggregation project(':ingestion-boot')
    jacocoAggregation project(':ingestion-infra-input-rest')
    jacocoAggregation project(':ingestion-infra-input-kafka')
    jacocoAggregation project(':ingestion-infra-output-kafka')
    jacocoAggregation project(':ingestion-infra-mongodb')
    jacocoAggregation project(':ingestion-infra-postgresql')
    
    testReportAggregation project(':ingestion-domain')
    testReportAggregation project(':ingestion-application')
    testReportAggregation project(':ingestion-boot')
    testReportAggregation project(':ingestion-infra-input-rest')
    testReportAggregation project(':ingestion-infra-input-kafka')
    testReportAggregation project(':ingestion-infra-output-kafka')
    testReportAggregation project(':ingestion-infra-mongodb')
    testReportAggregation project(':ingestion-infra-postgresql')
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'

    repositories {
        mavenCentral()
        mavenLocal()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    test {
        useJUnitPlatform()
        finalizedBy jacocoTestReport
    }

    jacocoTestReport {
        reports {
            html.required = true
            csv.required = true
            xml.required = true
        }
        dependsOn test
    }
}

subprojects {
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }
    }

    dependencies {
        implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
        implementation "io.swagger.core.v3:swagger-annotations:2.2.15"
        implementation 'org.apache.commons:commons-collections4:4.4'
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.apache.commons:commons-lang3:3.12.0'

        // Lombok
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        
        // Logging
        implementation "org.slf4j:slf4j-api:${slf4jVersion}"
        
        // Testing
        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
        testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
        testImplementation "org.mockito:mockito-core:${mockitoVersion}"
        testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
        testImplementation "org.assertj:assertj-core:${assertjVersion}"
        
        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    }
}

tasks.named('testCodeCoverageReport') {
    reports {
        html.required = true
        csv.required = true
        xml.required = true
    }
}

task printVersion {
    doLast {
        println project.version
    }
}

sonar {
    properties {
        property 'sonar.projectKey', 'backend_ingestion-api'
        property 'sonar.projectName', 'ingestion-api'
        property 'sonar.qualitygate.wait', true
        property 'sonar.coverage.jacoco.xmlReportPaths', 
            'build/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml'
        property 'sonar.java.source', '21'
    }
}

// Read and increment version from file
def getVersionFromFile() {
    def versionFile = file('version.txt')
    if (versionFile.exists()) {
        return versionFile.text.trim()
    } else {
        return '0.0.1'
    }

        def currentVersion = versionFile.text.trim()
        def versionParts = currentVersion.split('\\.')
        def major = versionParts[0] as Integer
        def minor = versionParts[1] as Integer
        def patch = versionParts[2] as Integer + 1

        def newVersion = "${major}.${minor}.${patch}"
        versionFile.text = newVersion

        println "Version incremented from ${currentVersion} to ${newVersion}"

        // For test and prod, we should commit and tag the release.
        def ENV_VAR = System.getenv('ENV')
        if (ENV_VAR != "dev") {
            exec { commandLine 'git', 'add', 'version.txt' }
            exec { commandLine 'git', 'commit', '-m', "Release version ${currentVersion}" }
            exec { commandLine 'git', 'tag', "v${currentVersion}" }
        }
}

//mainClassName = 'net.liquidcars.ingestion.IngestionApiApplication'

jib {

    //dependsOn 'updateVersion', 'build'
    // updated by incrementVersion
    def imageVersion = getVersionFromFile()

    //println "Version for image ${imageVersion}"

    // This is usually set in the deploy.sh script.
    def ENV_VAR = System.getenv('ENV')

    from {
        // See https://mcr.microsoft.com/en-us/artifact/mar/openjdk/jdk/tags
        image = 'mcr.microsoft.com/openjdk/jdk:21-distroless@sha256:ed2544cbbf0fd6476c1c4d158c570f1a0606a67f85a439ffddfad6d6b3f72084'
    }
    to {
        image = 'liquidcars.azurecr.io/liquidcars/' + ENV_VAR + '/ingestion'
        // tags = ['latest', imageVersion]
        project.gradle.projectsEvaluated {
            tags = [imageVersion]
            }
        auth {
            // from .env or from CI/CD pipeline
            username = "$System.env.ACR_CREDENTIALS_USR"
            password = "$System.env.ACR_CREDENTIALS_PWD"
        }
    }
    container {
        //jvmFlags = ['-Xms512m', '-Xmx512m']
        mainClass = 'net.liquidcars.ingestion.IngestionApiApplication'
    }
}
